# treesim

./: .gitignore  README.md
consensus/150/: info.txt  run.0.maj  run.0.str  run.1.maj  run.1.str
consensus/525/: info.txt  run.0.str  run.1.str  run.3.maj  run.3.str  run.4.str
consensus/567/: info.txt  run.0.maj  run.0.str  run.1.maj  run.1.str  run.10.maj  run.10.str  run.11.maj  run.11.str  run.2.maj  run.2.str  run.3.maj  run.3.str  run.4.maj  run.4.str  run.5.maj  run.5.str  run.6.maj  run.6.str  run.7.maj  run.7.str  run.8.maj  run.8.str  run.9.maj  run.9.str
treefiles/: 10taxa-12trees.tre  150-1000.tre  RalphEx.tre  input.tre
treesim/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  SCNode.cc  SCNode.h  SCTree.cc  SCTree.h  SCTree.hh  buildtree.cc  buildtree.h  config.hh.in  configure  configure.ac  label-map.cc  label-map.hh  newick.c  test.sh  treesim  treesim.cc
treesim/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
treesim/data/: 567-1.tre  rtree-10-1.tre  rtree-10-1.tre.trz  rtree-1024-taxa-1-tree.tre  rtree-256-taxa-1-tree.tre  rtree-4096-taxa-1-tree.tre
treesim/results/: 150_biparts.R  567_biparts.R
treesim/trex/: 567.final.matrix  average.py  genMatrix.sh  heatmap.py
unresolvermaj/: Makefile.am  Makefile.in  SCNode.cc  SCNode.hh  SCTree.cc  bitset.cc  bitset.hh  configure  configure.ac  hashfunc.cc  hashfunc.hh  label-map.cc  label-map.hh  mersenne.cc  newick.h  outtree  randomc.h  unresolvermaj.cc
unresolvermaj/autom4te.cache/: output.0  requests  traces.0  traces.1
unresolvermaj/data/: rtree-128-taxa-1-tree.tre  rtree-16384-taxa-1-tree.tre  rtree-2048-taxa-1-tree.tre
unresolverstr/: Makefile.am  Makefile.in  NEWS  SCNode.cc  SCNode.hh  SCTree.cc  SCTree.hh  bitset.cc  bitset.hh  configure  configure.ac  gmon.out  hashfunc.hh  hashmap.cc  hashmap.hh  mersenne.cc  randomc.h  unresolverstr.cc
unresolverstr/data/: outtree  outtree.nex  rtree-512-taxa-1-tree.tre  rtree-8192-taxa-1-tree.tre  temp.out  test.out
