
#AM_CXXFLAGS = -static
AM_CXXFLAGS = -Wall -g
#CXXFLAGS += -O3 -pg
#AM_CXXFLAGS += -O3 -fexpensive-optimizations

#AM_CXXFLAGS += -DNDEBUG

# misc.

# real program stuff
bin_PROGRAMS = treesim

treesim_SOURCES =



# From Split-Dist
treesim_SOURCES += label-map.hh label-map.cc

# For Consensus tree
treesim_SOURCES += SCNode.cc SCTree.cc

treesim_SOURCES += newick.h newick.c

# Main
treesim_SOURCES += treesim.cc






#eof
