
AC_INIT(unresolverstr, 1.0.0, sulsj@cs.tamu.edu)
AM_INIT_AUTOMAKE(unresolverstr, 1.0.0)
AM_CONFIG_HEADER(config.hh)

# Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.
AC_HEADER_DIRENT

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_UID_T
AC_TYPE_PID_T

AC_OUTPUT([
	Makefile
])

